--- a/site/arrange-access/index.html
+++ b/site/arrange-access/index.html
@@ -379,6 +379,8 @@
 <blockquote>
 <p>For FCP Platform or service specific support, the above Teams chats should be used instead.</p>
 </blockquote>
+<p>Anyone with a <code>defra.gov.uk</code> or an ALB email address can join the Defra Digital Slack workspace automatically.</p>
+<p>For those with other email addresses, a request should be raised in the <code>#slack-support</code> channel by someone with access.</p>
 <h2 id="sharepoint">SharePoint</h2>
 <p>SharePoint is Defra's primary document library.</p>
 <p>An <a href="https://defra.sharepoint.com/teams/Team1974/SitePages/Home.aspx">FCP SharePoint site</a> has been created.</p>
