--- a/site/create-a-new-service/github/index.html
+++ b/site/create-a-new-service/github/index.html
@@ -1950,6 +1950,7 @@
 <p>As per Defra and GDS standards, source code should be open source and hosted on GitHub.  Other tools such as Azure DevOps, Bitbucket and GitLab are not permitted for application development.</p>
 <p>Scenarios where open source is not appropriate are rare and must be approved by a Principal Developer.</p>
 <p>All source code is hosted in the <a href="https://github.com/DEFRA">DEFRA GitHub Organisation</a></p>
+<p>Repositories should contain a single microservice/application.  Monorepos are not supported by CI pipeline.</p>
 <h2 id="naming-conventions">Naming conventions</h2>
 <p>Repositories should be named in a consistent manner to aid discoverability and to ensure that they are easily identifiable as part of FCP.</p>
 <p>Below is the agreed naming convention for repositories.</p>
