--- a/site/getting-started/arrange-access/index.html
+++ b/site/getting-started/arrange-access/index.html
@@ -2442,8 +2442,12 @@
 <p>Contact one of Defra's Principal Developers to arrange access.</p>
 <h2 id="sonarcloud">SonarCloud</h2>
 <p>SonarCloud is used for static code analysis during Continuous Integration pipelines in FCP.</p>
-<p>A <a href="https://sonarcloud.io/organizations/defra">Defra organisation</a> has been created and developers will need to be added to it using their GitHub account.</p>
-<p>Contact one of Defra's Principal Developers to arrange access.</p>
+<p>FCP projects are hosted in the SonarCloud <a href="https://sonarcloud.io/organizations/defra">Defra organisation</a>. Within the Defra organisation an FCP group has been created to manage access to all FCP projects.</p>
+<p>In order to be added to the FCP group:</p>
+<ol>
+<li>Sign up to SonarCloud with your GitHub account</li>
+<li>Contact one of Defra's Principal Developers to be added to the FCP group</li>
+</ol>
 <h2 id="azure-devops-ado">Azure DevOps (ADO)</h2>
 <p>Azure DevOps is used for Continuous Delivery pipelines in FCP.  ADO is also used for work item tracking and Wiki creation.</p>
 <p>Developers will need to be added to the <a href="https://dev.azure.com/defragovuk/DEFRA-FFC">DEFRA-FFC</a> project.</p>
