--- a/site/create-a-new-service/github/index.html
+++ b/site/create-a-new-service/github/index.html
@@ -2244,6 +2244,9 @@
 <p>For .NET there is no template repository, however, this <a href="https://github.com/DEFRA/ffc-demo-payment-service-core">demo repository</a> can be used for guidance.</p>
 </blockquote>
 <p>Due to the GitHub permission model, only certain users can create new repositories.  If you are unable to create a new repository, please contact a Principal Developer.</p>
+<blockquote>
+<p>For services using ADP, the scaffolding from the ADP Developer Portal will automatically create a repository in the DEFRA GitHub organisation and setup SonarCloud, Synk, CI/CD etc</p>
+</blockquote>
 <h2 id="repository-setup">Repository setup</h2>
 <h3 id="update-access">Update access</h3>
 <p>All repositories should be setup to allow access to the FCP team.  This is done by adding the <a href="https://github.com/orgs/DEFRA/teams/ffc"><code>ffc</code></a> team with <code>Write</code> access to the repository.</p>
