--- a/site/development-patterns/containers/index.html
+++ b/site/development-patterns/containers/index.html
@@ -2680,7 +2680,7 @@
 <p>Containers are lightweight and fast. One of their main benefits for developers is that it is simple to replicate an application’s environment and dependencies locally consistently. </p>
 <p>Crucially, they enable a workflow for your code that allows you to develop and test locally, push to upstream, and be confident that what you have built locally will work in CI and any environment.</p>
 <h2 id="docker">Docker</h2>
-<p>All FFC microservices are built from supported Defra parent images for Node.js and .NET.  A <code>Dockerfile</code> will be included in each microservice repository containing a multi-stage build definition referencing these images.</p>
+<p>All microservices are built from supported Defra parent images for Node.js and .NET.  A <code>Dockerfile</code> will be included in each microservice repository containing a multi-stage build definition referencing these images.</p>
 <p>All microservice repositories created from the <a href="https://github.com/DEFRA/ffc-template-node">FFC Node template</a> will include this <code>Dockerfile</code> already configured.</p>
 <h2 id="docker-compose">Docker Compose</h2>
 <p><a href="https://docs.docker.com/compose/">Docker Compose</a> is a tool for defining and running multi-container Docker applications using yaml configuration files.</p>
